# auth_service

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt
app/: alembic.ini  main.py
app/src/alembic/: env.py
app/src/alembic/versions/: 2025_11_21_1223-355215a62d1f_create_users_table.py
app/src/api/: __init__.py  auth_handlers.py  users_handlers.py
app/src/api/dependencies/: auth_validation.py  service_factory.py
app/src/configs/: __init__.py  config.py
app/src/crud/: users.py
app/src/db/: database.py  models.py  session.py
app/src/schemas/: auth.py  users.py
app/src/services/: users.py
app/src/services/dependencies/: sessions.py
app/src/utils/: __init__.py  jwt_encoding.py  password_hashing.py
infra/: Dockerfile  create_keys.sh  docker-compose.yml  entrypoint.sh  run_tests.sh
src/: alembic.ini  main.py  pyproject.toml
src/app/: main.py
src/app/alembic/: env.py
src/app/alembic/versions/: 2025_11_22_1848-3fafd74d7128_.py  2025_11_24_0951-b53efc45b0cf_таймзона.py  2025_11_24_1003-0874666b1c89_.py
src/app/api/: __init__.py  auth_handlers.py  users_handlers.py
src/app/api/dependencies/: service_factory.py
src/app/configs/: __init__.py  config.py
src/app/crud/: users.py
src/app/crud/exceptions/: __init__.py  users_exc.py
src/app/db/: models.py  session.py
src/app/schemas/: auth.py  users.py
src/app/services/: users.py
src/app/services/exceptions/: __init__.py  users_exc.py
src/app/utils/: __init__.py  jwt_encoding.py  password_hashing.py
src/tests/: test_user_service.py
(+2 files in other folders)
